# himnario

./: .gitignore  README.md  pyproject.toml
src/hymn_studio/: __init__.py  app.py  audio.py  cli.py  exporter.py  main.py  models.py  project.py  settings.py  timeline.py
src/hymn_studio/services/: audio_matcher.py  lyrics.py  slide_generator.py  slides.py  template_config.py
src/hymn_studio/ui/: main_window.py
src/hymn_studio/widgets/: slide_preview.py
tests/: test_audio_matcher.py  test_cli.py  test_lyrics.py  test_multi_hymn.py  test_slide_generator.py  test_template_config.py  test_timeline.py
