[project]
name = "hymn-studio"
version = "0.1.0"
description = "Desktop tool for synchronizing hymn slides with audio and exporting MP4 videos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[project.scripts]
hymn-studio = "hymn_studio.main:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
