[project]
name = "hymn-studio"
version = "0.1.0"
description = "Desktop tool for synchronizing hymn slides with audio and exporting MP4 videos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "Pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]
windows = [
    "pywin32>=306; sys_platform == 'win32'",
]

[project.scripts]
hymn-studio = "hymn_studio.main:main"
hymn-studio-build = "hymn_studio.cli:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
